Refactor to use getFirst() for retrieving the first track from the playlist